# oshot

./: .clang-format  .clangd  .gitignore  .snyk  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_flags.txt  flake.nix  oshot.desktop  te.cpp  te2.cpp
.github/: FUNDING.yml
.github/workflows/: build.yml  cmake.yml  docker.yml  release.yml
debian/: changelog  control  copyright  rules
imgui/: Makefile
include/: cache.hpp  clipboard.hpp  config.hpp  langs.hpp  ocr.hpp  oshot_png.hpp  platform.hpp  png.h  screen_capture.hpp  screenshot_tool.hpp  socket.hpp  text_extraction.hpp  tool_icons.h  translation.hpp  ui_icons.h  util.hpp
include/libs/: dotenv.h  dotenv.hpp  httplib.h
include/libs/cimgui/: cimgui.h
include/libs/imgui/: imconfig.h
include/libs/spdlog/: tweakme.h
include/libs/trayapp/: tray.hpp
include/libs/trayapp/components/: button.hpp  imagebutton.hpp  label.hpp  separator.hpp  submenu.hpp  syncedtoggle.hpp  toggle.hpp
include/libs/trayapp/core/: icon.hpp  image.hpp
include/libs/trayapp/core/linux/: tray.hpp
include/libs/trayapp/core/windows/: tray.hpp
launcher/: oshot_launcher.py  oshot_launcher.pyw
mk/: common.mk
scripts/: create_app_bundle.sh  create_appimage.sh  icon_generator.py
src/: cache.cpp  clipboard.cpp  config.cpp  main.cpp  main_tool_glfw.cpp  main_tool_metal.mm  main_tool_opengl3.cpp  ocr.cpp  screen_capture.cpp  screenshot_tool.cpp  socket.cpp  text_extraction.cpp  translation.cpp  util.cpp
src/libs/cimgui/: Makefile  cimgui.cpp
src/libs/clip/: Makefile  clip_none.cpp
src/libs/fmt/: Makefile
src/libs/getopt_port/: Makefile
src/libs/imgui/: Makefile
src/libs/nvdialog/: Makefile  nvdialog_assert.h
src/libs/nvdialog/backend/cocoa/: nvdialog_file_dialog.m
src/libs/tiny-process-library/: Makefile
src/libs/tinyfiledialogs/: Makefile
src/libs/toml++/: Makefile
src/libs/tray/: Makefile  tray_darwin.mm  tray_linux.cpp  tray_windows.cpp
src/libs/trayapp/: Makefile
src/libs/trayapp/components/: button.cpp  imagebutton.cpp  label.cpp  separator.cpp  submenu.cpp  syncedtoggle.cpp  toggle.cpp
src/libs/trayapp/core/: entry.cpp  traybase.cpp
src/libs/trayapp/core/linux/: icon.cpp  image.cpp  tray.cpp
src/libs/trayapp/core/windows/: icon.cpp  image.cpp  tray.cpp
src/plugins/: oshot_plugin.h  plugins.cpp
